# ai-edge-quantizer

./: .gitignore  BUILD  CONTRIBUTING.md  README.md  algorithm_manager.py  algorithm_manager_api.py  calibrator.py  dev_requirements.txt  format.sh  model_modifier.py  params_generator.py  pyproject.toml  quantization_toolkit.py  recipe_manager.py  requirements.txt  setup.py  stable_release.sh  test_kokoro.sh  test_pip_package.sh  transformation_instruction_generator.py  transformation_performer.py
ai_edge_quantizer/: README.md  __init__.py  aeq.py  aeq_test.py  algorithm_manager.py  algorithm_manager_api.py  algorithm_manager_api_test.py  calibrator.py  calibrator_test.py  conftest.py  default_policy.py  end_to_end_test.py  model_modifier.py  model_modifier_test.py  model_validator.py  model_validator_test.py  params_generator.py  params_generator_test.py  qtyping.py  qtyping_test.py  quantizer.py  quantizer_test.py  recipe.py  recipe_manager.py  recipe_manager_test.py  recipe_test.py  test_runner.py  transformation_instruction_generator.py  transformation_instruction_generator_test.py  transformation_performer.py  transformation_performer_test.py
colabs/: getting_started.ipynb  selective_quantization_isnet.ipynb  torch_convert_and_quantize.ipynb
examples/: BUILD  isnet.ipynb  mnist_toy_model.py
quantization_toolkit/: BUILD  algorithm_manager.py  algorithm_manager_api.py  algorithm_manager_api_test.py  calibrator.py  calibrator_test.py  end_to_end_test.py  model_modifier.py  model_modifier_test.py  model_validator.py  model_validator_test.py  params_generator.py  params_generator_test.py  qtyping.py  quant_toolkit.py  quant_toolkit_test.py  quantization_toolkit.py  recipe_manager.py  recipe_manager_test.py  requirements.txt  transformation_instruction_generator.py  transformation_instruction_generator_test.py  transformation_performer.py  transformation_performer_test.py  typing.py
test_models/: conv_fc_mnist.tflite  generate_test_model.ipynb
utils/: test_utils.py  (+2 more)
(+350 files in other folders)
