[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-edge-quantizer"
description = "A quantizer for advanced developers to quantize converted AI Edge models."
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["On-Device ML", "AI", "Google", "TFLite", "Quantization", "LLMs", "GenAI"]
dependencies = [
    "absl-py",
    "immutabledict",
    "numpy",
    "ml_dtypes",
    "ai-edge-litert-nightly",
]

[project.urls]
Homepage = "https://github.com/google-ai-edge/ai-edge-quantizer"

[dependency-groups]
dev = [
    "build",
    "colorama",
    "isort",
    "parameterized",
    "pyink",
    "pytest",
    "pytest-xdist",
]

[tool.uv]
required-environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
]

[tool.setuptools.dynamic]
version = {file = ["VERSION"]}

[tool.setuptools.packages.find]
include = ["ai_edge_quantizer*"]

[tool.pytest.ini_options]
addopts = "--import-mode=importlib -n auto --dist loadfile"
